[tool.poetry]
name = "mpot-armour"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mpot"}]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.11.3"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
labmaze = "^1.0.6"
torch = "^2.1.0"
einops = "^0.7.0"
jedi-language-server = "^0.41.1"
jupyter = "^1.0.0"
black = "^23.10.1"
torch-robotics = {git = "https://github.com/anindex/torch_robotics"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
