[tool.poetry]
name = "mpot-armour"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mpot"}, {include = "mpot_rearmour"}, {include="submodules/rearmour"}]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.11.3"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
labmaze = "^1.0.6"
torch = "^2.1.0"
einops = "^0.7.0"
jedi-language-server = "^0.41.1"
jupyter = "^1.0.0"
black = "^23.10.1"
torch-robotics = {git = "https://github.com/anindex/torch_robotics"}
zonopy = {git = "ssh://git@github.com/roahmlab/zonopy.git", rev = "d07e06e534e395ef9873076adc4b160ac89da5b1"}
zonopy-robots = {git = "ssh://git@github.com/roahmlab/zonopy-robots.git", rev = "2246788251304d780348e455348ed74c3fed269c"}
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
